--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.4.1",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.2.0",
     "tailwind-merge": "^3.0.1",
